[project]
name = "cloud-diagnose"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blinker==1.9.0",
    "boto3>=1.36.21",
    "click==8.1.8",
    "dotenv>=0.9.9",
    "flask==3.1.0",
    "flask-jwt-extended>=4.7.1",
    "flask-sqlalchemy>=3.1.1",
    "itsdangerous==2.2.0",
    "jinja2==3.1.5",
    "markupsafe==3.0.2",
    "psycopg2-binary>=2.9.10",
    "reportlab>=4.3.1",
    "requests>=2.32.3",
    "response>=0.5.0",
    "scipy>=1.15.2",
    "werkzeug==3.1.3",
]
